# AI_AGENT_TEST

./: .env.example  .gitignore  README.md  bot.py  cli.py  pyproject.toml  requirements.txt  run.bat  run.sh
data/: 星云联动大数据项目管理 SOP（脱敏版）.txt
script/: __init__.py  bot.py  chunking.py  cli.py  config.py  deploy.py  doc_parse.py  ingestion.py  main.py
static/: index.html
