[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-test-rag"
version = "0.1.0"
description = "Minimal RAG service with ChromaDB + FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chromadb>=0.4.14",
  "openai>=1.0.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.22.0",
  "python-dotenv>=1.0.0",
  "pypdf>=3.17.0",
  "python-docx>=1.1.0",
]

[project.scripts]
ai-rag-serve = "script.deploy:main"
ai-rag-cli = "script.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["script*"]
